# 3p-open-libndofdev_sdl1

./: .gitignore  BuildParams  autobuild.xml  build-cmd.sh
libndofdev/: CMakeLists.txt  README
libndofdev/LICENSES/: libndofdev.txt
